[tool.poetry]
name = "mergefast"
version = "0.1.0"
description = "This is a `FastAPI` :rocket: app that utilizes `GitHub App` and `GitHub APIs` to perform some checks on `CRAB` merge requests."
authors = ["Islam Ayman <islam.ayman@seeq.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.112.0"
uvicorn = {version = "^0.17.6", extras = ["standard"]}
aiohttp = "^3.8.1"
python-dotenv = "^0.20.0"
PyJWT = "^2.3.0"
cryptography = "^37.0.3"
Jinja2 = "^3.1.1"
packaging = "^21.3"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"
pytest-cov = "^3.0.0"
factory-boy = "^3.2.1"
pydantic-factories = "^1.3.0"
httpx = "^0.23.0"
pytest-asyncio = "^0.18.3"
requests = "^2.28.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
